--- a/master.css
+++ b/master.css
@@ -80,6 +80,7 @@ html {
 
 body {
     height: auto;
+    width: 100%;
     background-color: #636664;
 }
 
@@ -195,8 +196,8 @@ h1 {
     font-size: 5rem;
     font-weight: bolder;
     letter-spacing: 0.1em;
-    border-top: 2px dotted white;
-    border-bottom: 2px dotted white;
+    /* border-top: 2px dotted white;
+    border-bottom: 2px dotted white; */
     margin: 0% 15%;
 }
 
@@ -228,7 +229,6 @@ h1 {
 #bodyblock {
     background-color: rgb(233, 233, 233);
     margin: 0% 10%;
-    /* height: 90%; */
 }
 
 #bodyp {
@@ -255,3 +255,46 @@ h1 {
     width: 38%;
     margin-bottom: 5%;
 }
+
+/* FOOTER */
+
+#footer {
+    display: flex;
+    justify-content: space-evenly;
+    background: #737574;
+    color: #7c8081;
+    text-align: center;
+    margin-top: 5%;
+    height: 10%;
+}
+
+
+/* RESPONSIVE DESIGN */
+
+@media (max-width: 1000px) {
+
+    .container #header {
+        margin-left: 40rem;
+        margin-bottom: 6rem;
+        height: 3rem;
+        padding-top: .7rem;
+        letter-spacing: 0.075em;
+        right: 1.5em;
+        text-transform: uppercase;
+        top: 0.75em;
+    }
+
+    #headbanner {
+        display: flex;
+        flex-direction: column;
+        margin: 0% 26% 25%;
+        height: 60%;
+        background: rgba(55, 90, 66, 0.616);
+        padding-top: 4.5rem;
+        font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+    }
+
+}
+
+
+
