--- a/master.css
+++ b/master.css
@@ -245,16 +245,38 @@ h1 {
     font-weight: bolder;
 }
 
-.images {
+#bodyblock .images {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 #img1, #img2, #img3, #img4 {
-    width: 38%;
+    width: 90%;
+    margin-bottom: 3%;
+}
+
+.img {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
     margin-bottom: 5%;
 }
+
+h2 {
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 2%;
+}
+
+.images p {
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+}
+
 
 /* FOOTER */
 
@@ -270,49 +292,6 @@ h1 {
 
 
 /* RESPONSIVE DESIGN */
-
-@media (max-width: 2560px) {
-    .container {
-        height: 75rem;
-    }
-
-    #welcome {
-        font-size: 2rem;
-    }
-    
-    #menu {
-        font-size: 2rem;
-    }
-    
-    #signup {
-        width: 30%;
-        height: 3.5rem;
-        font-size: 2rem;
-    }
-
-    #headbanner {
-        margin: 0% 30% 10%;
-        height: 75%;
-        padding-top: 4.5rem;
-    }
-
-    h1 {
-        font-size: 10rem;
-        margin-top: 3%;
-    }
-
-    #headbanner p {
-        font-size: 4rem;
-    }
-
-    .explore {
-        width: 60%;
-        height: 5rem;
-        margin: 0% 20%;
-    }
-
-
-}
 
 @media (max-width: 1000px) {
 
@@ -334,6 +313,18 @@ h1 {
 
     #bodyp {
         font-size: 1.2rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    .images p {
+        font-size: 0.9rem;
+    }
+
+    #footer {
+        height: 8%;
     }
 
 }
@@ -368,6 +359,14 @@ h1 {
 
     #bodyp {
         font-size: 1rem;
+    }
+
+    h2 {
+        font-size: 1.6rem;
+    }
+
+    .images p {
+        text-align: center;
     }
 
 }
@@ -407,8 +406,12 @@ h1 {
         align-items: center;
     }
 
+    .img {
+        width: 100%;
+    }
+
     #bodyp {
-        font-size: .8rem;
+        font-size: 1rem;
     }
 
 
@@ -418,4 +421,17 @@ h1 {
     }
 
 
+}
+
+
+@media (max-width: 375px) {
+
+    #headbanner {
+        height: 50%;
+        margin-bottom: 70%;
+    }
+
+    h1 {
+        margin-top: -5%;
+    }
 }
