--- a/master.css
+++ b/master.css
@@ -71,6 +71,7 @@ input, select, textarea {
 
 /* END RESET */
 
+/* MAIN PAGE */
 
 /* GENERIC */
 
@@ -155,6 +156,7 @@ a:hover {
 }
 
 
+
 /* DROP DOWN */
 
 .dropdown {
@@ -182,7 +184,7 @@ a:hover {
 #headbanner {
     display: flex;
     flex-direction: column;
-    margin: 0% 36% 16%;
+    margin: 0% 36% 20%;
     height: 60%;
     background: rgba(55, 90, 66, 0.616);
     padding-top: 4.5%;
@@ -284,11 +286,96 @@ h2 {
     display: flex;
     justify-content: space-evenly;
     background: #737574;
-    color: #7c8081;
     text-align: center;
     margin-top: 5%;
     height: 10%;
 }
+
+/* END MAIN PAGE */
+
+/* TEAM PAGE */
+
+.container2 {
+    background-image: url("https://images.unsplash.com/photo-1508867743401-21ad68d105b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2800&q=80");
+    height: 1900px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* NAVIGATION BAR */
+
+.container2 #signup {
+    display: flex;
+    border: 1px solid rgb(172, 189, 178);
+    color: white;
+    text-decoration: none;
+    background: rgb(91, 123, 167);
+    width: 25%;
+    height: 2.5rem;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.container2 #header {
+    margin-left: 65%;
+    margin-bottom: 6%;
+    height: 3%;
+    padding-top: .7%;
+    letter-spacing: 0.075em;
+    right: 1.5em;
+    text-transform: uppercase;
+    top: 0.75em;
+}
+
+/* TEAM IMAGES */
+
+#teamheader {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: center;
+    background: rgba(166, 182, 202, 0.616);
+    margin: 0% 15% 5%;
+    padding-top: 3%;
+}
+
+.container2 h1 {
+    font-size: 4rem;
+    margin-bottom: 5%;
+    color: #636664;
+}
+
+.container2 h2 {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.container2 p {
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    text-align: center;
+}
+
+#buddy, #zachary, #stacey, #chris, #kristian, #khwanchai, #maycie {
+    width: 50%;
+    border-radius: 50%;
+    margin-bottom: 3%;
+}
+
+
+.teamimg1, .teamimg2, .teamimg3, .teamimg4, .teamimg5, .teamimg6, .teamimg7  {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 50%;
+    margin-bottom: 5%;
+}
+
+
 
 
 /* RESPONSIVE DESIGN */
@@ -435,3 +522,7 @@ h2 {
         margin-top: -5%;
     }
 }
+
+
+
+
