--- a/master.css
+++ b/master.css
@@ -671,6 +671,75 @@ h2 {
 }
 
 
+/* RESPONSIVE DESIGN ABOUT */
+
+@media (max-width: 1000px) {
+    .container3 {
+        height: 75rem;
+    }
+
+    .aboutbody p {
+        font-size: 1.3rem;
+    }
+
+}
+
+
+@media (max-width: 800px) {
+
+    .container3 {
+        height: 55rem;
+    }
+
+    .container3 #header {
+        margin-left: 48%;
+        margin-bottom: 5%;
+    }
+
+    .aboutsection h1 {
+        font-size: 2.5rem;
+    }
+
+    .aboutbody p {
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width: 500px) {
+    
+    .container3 {
+        height: 75rem;
+    }
+
+    .container3 #header {
+        margin-left: 0%;
+        margin-bottom: 10%;
+    }
+
+    .aboutsection h1 {
+        font-size: 1.7rem;
+    }
+
+    .div1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #dsec1, #dsec3 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .aboutpics {
+        width: 100%;
+    }
+
+}
+
+
 
 
 
