--- a/master.css
+++ b/master.css
@@ -598,14 +598,24 @@ h2 {
 
 @media (max-width: 375px) {
 
+    .container {
+        height: 27rem;
+    }
+
     #headbanner {
-        height: 50%;
-        margin-bottom: 70%;
+        height: 70%;
+        margin-bottom: 50%;
+    }
+
+    #img1, #img2, #img3, #img4 {
+        width: 95%;
     }
 
     h1 {
         margin-top: -5%;
     }
+
+
 }
 
 
@@ -670,6 +680,28 @@ h2 {
         width: 100%;
     }
 
+}
+
+
+@media (max-width: 375px) {
+
+    .container2 {
+        height: 103rem;
+    }
+
+    #headbanner {
+        height: 70%;
+        margin-bottom: 50%;
+    }
+
+    .container2 h1 {
+        margin-top: 5%;
+        margin-bottom: 6%;
+    }
+
+    .teamimg1, .teamimg2, .teamimg3, .teamimg4, .teamimg5, .teamimg6, .teamimg7  {
+        width: 110%;
+    }
 }
 
 
@@ -739,6 +771,18 @@ h2 {
         width: 100%;
     }
 
+}
+
+@media (max-width: 375px) {
+
+    .container3 {
+        height: 65rem;
+    }
+
+    .container3 h1 {
+        margin-top: 5%;
+        font-size: 1.3rem;
+    }
 }
 
 
