--- a/master.css
+++ b/master.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
 
+
 /* RESET CSS */
 
 html, body, div, span, applet, object,
@@ -283,14 +284,56 @@ h2 {
 
 /* FOOTER */
 
-#footer {
+.footer {
     display: flex;
     justify-content: space-evenly;
-    background: #636664;
+    background: #707271;
     text-align: center;
     margin-top: 5%;
-    height: 2%;
+    height: 10%;
 }
+
+.social-buttons a{
+    display: inline-flex;
+    text-decoration: none;
+    font-size: 18px;
+    width: 60px;
+    height: 60px;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 0 8px;
+    margin-top: 3%;
+  }
+  
+  .social-buttons a::before{
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background: linear-gradient(45deg,#22a6b3,#30336b);
+    border-radius: 50%;
+    z-index: -1;
+    transition: 0.3s ease-in;
+  }
+  
+  .social-buttons a:hover::before{
+    transform: scale(0);
+  }
+  
+  .social-buttons a i{
+    transition: 0.3s ease-in;
+  }
+  
+  .social-buttons a:hover i{
+    background: linear-gradient(45deg,#22a6b3,#30336b);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transform: scale(2.2);
+  }
+  
+
 
 /* END MAIN PAGE */
 
@@ -457,6 +500,19 @@ h2 {
     margin: 2% 0%;
     border: 2px solid black;
 }
+
+
+/* FOOTER */
+
+.footer2 {
+    display: flex;
+    justify-content: space-evenly;
+    background: #707271;
+    text-align: center;
+    margin-top: 5%;
+    height: 5%;
+}
+
 
 /* END ABOUT DESIGN */
 
