--- a/master.css
+++ b/master.css
@@ -328,7 +328,7 @@ h2 {
   
   .social-buttons a:hover i{
     background: linear-gradient(45deg,#22a6b3,#30336b);
-    -webkit-background-clip: text;
+    /* -webkit-background-clip: text; */
     -webkit-text-fill-color: transparent;
     transform: scale(2.2);
   }
@@ -426,6 +426,18 @@ h2 {
 #github1, #github2, #github3, #github4, #github5, #github6, #github7 {
     margin-top: 2%;
     width: 8%;
+}
+
+
+/* FOOTER DESIGN */
+
+.footer3 {
+    display: flex;
+    justify-content: space-evenly;
+    background: #707271;
+    text-align: center;
+    margin-top: 0%;
+    height: 10%;
 }
 
 
