--- a/master.css
+++ b/master.css
@@ -448,7 +448,7 @@ h2 {
 /* ABOUT DESIGN */
 
 .container3 {
-    background-image: url("https://images.unsplash.com/photo-1554797589-7241bb691973?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2776&q=80");
+    background-image: url("https://images.unsplash.com/photo-1543337542-9c915b01789e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2734&q=80");
     height: 1480px;
     background-position: center;
     background-repeat: no-repeat;
@@ -463,7 +463,7 @@ h2 {
     border: 1px solid rgb(184, 172, 189);
     color: white;
     text-decoration: none;
-    background: rgb(165, 79, 79);
+    background: rgb(173, 117, 44);
     width: 25%;
     height: 2.5rem;
     justify-content: center;
@@ -687,6 +687,47 @@ h2 {
       }
 
 }
+
+
+/* TEST */
+
+/* #header {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+
+  #header #nav {
+    display: none;
+  }
+  
+  #header a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+
+  #header a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  #header a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .active {
+    background-color: #4CAF50;
+    color: white;
+  } */
+
+
 
 
 @media (max-width: 375px) {
